SIGSEGV in CompiledMethod::cleanup_inline_caches_impl with AOT

XMLWordPrintable

    • b22
    • Verified

      Hadoop Terasort with partially AOT'ed (tiered, parallel GC) java.base crashes. At least on AArch64 but this may be a generic issue. Breaking change is JDK-8209189.

      Stack: [0x0000fffc4d9d0000,0x0000fffc4dbd0000], sp=0x0000fffc4dbce370, free space=2040k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x4d58d4] CompiledMethod::cleanup_inline_caches_impl(bool, bool)+0x344
      V [libjvm.so+0xb36030] NMethodSweeper::process_compiled_method(CompiledMethod*)+0xe0
      V [libjvm.so+0xb36888] NMethodSweeper::sweep_code_cache()+0x240
      V [libjvm.so+0xb36de0] NMethodSweeper::possibly_sweep()+0x98
      V [libjvm.so+0xb37200] NMethodSweeper::sweeper_loop()+0x1f8
      V [libjvm.so+0xb85a98] JavaThread::thread_main_inner()+0x118
      V [libjvm.so+0xb85cf0] JavaThread::run()+0x218
      V [libjvm.so+0xb83118] Thread::call_run()+0x178
      V [libjvm.so+0x9f4958] thread_native_entry(Thread*)+0x100
      C [libpthread.so.0+0x708c] start_thread+0xac

      There may be also crash like

      # V [libjvm.so+0x4b0448] void clean_if_nmethod_is_unloaded<CompiledIC>(CompiledIC*, unsigned char*, CompiledMethod*, bool) [clone .constprop.51]+0xf8

            Assignee:
            Erik Ă–sterlund
            Reporter:
            Dmitry Chuyko
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: