8213486: SIGSEGV in CompiledMethod::cleanup_inline_caches_impl with AOT

Reviewed-by: kvn, dlong