src/hotspot/share/aot/aotCompiledMethod.hpp
@@ -176,6 +176,8 @@ private:
   virtual bool is_alive() const { return _is_alive(); }
   virtual bool is_in_use() const { return state() == in_use; }
 
+  virtual bool is_unloading() { return false; }
+
   address exception_begin() const { return (address) _code + _meta->exception_handler_offset(); }
 
   virtual const char* name() const { return _name; }
